--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @font-face {
     font-family: "MyFont";
-    src: url("../fonts/RyuminPro-Bold.otf") format("opentype"), url("../font/RyuminPro-Bold.eot") format("embedded-opentype"), url("../fonts/RyuminPro-Bold.eot?") format("embedded-opentype"), url("../fonts/RyuminPro-Bold.woff") format("woff"), url("../fonts/RyuminPro-Bold.woff2") format("woff2");
+    src: url("../fonts/RyuminPro-Bold.otf") format("opentype"),
+        url("../font/RyuminPro-Bold.eot") format("embedded-opentype"),
+        url("../fonts/RyuminPro-Bold.eot?") format("embedded-opentype"),
+        url("../fonts/RyuminPro-Bold.woff") format("woff"),
+        url("../fonts/RyuminPro-Bold.woff2") format("woff2");
 }
 
 .myfont {
@@ -11,9 +15,11 @@
     body {
         font-size: 1rem;
     }
+
     footer {
         font-size: 1rem;
     }
+
     .line:before,
     .line:after {
         content: '';
@@ -24,6 +30,7 @@
         height: 3px;
         background-color: #6A3906;
     }
+
     .line_green:before,
     .line_green:after {
         content: '';
@@ -34,6 +41,7 @@
         height: 3px;
         background-color: #006F49;
     }
+
     .line_green_two:before,
     .line_green_two:after {
         content: '';
@@ -44,10 +52,12 @@
         height: 3px;
         background-color: #006F49;
     }
+
     .hero {
-        content: url(../images/hero_sp.webp);
+        content: url(../images/hero_sp.jpg);
         width: 100%;
     }
+
     .one:before {
         content: url(../images/types_one.svg);
         display: block;
@@ -55,6 +65,7 @@
         height: 55px;
         margin: 0 auto;
     }
+
     .two:before {
         content: url(../images/types_two.svg);
         display: block;
@@ -62,6 +73,7 @@
         height: 55px;
         margin: 0 auto;
     }
+
     .three:before {
         content: url(../images/types_three.svg);
         display: block;
@@ -69,6 +81,7 @@
         height: 55px;
         margin: 0 auto;
     }
+
     .four:before {
         content: url(../images/types_four.svg);
         display: block;
@@ -76,6 +89,7 @@
         height: 55px;
         margin: 0 auto;
     }
+
     .five:before {
         content: url(../images/types_five.svg);
         display: block;
@@ -83,6 +97,7 @@
         height: 55px;
         margin: 0 auto;
     }
+
     .six:before {
         content: url(../images/types_six.svg);
         display: block;
@@ -90,6 +105,7 @@
         height: 55px;
         margin: 0 auto;
     }
+
     .seven:before {
         content: url(../images/types_seven.svg);
         display: block;
@@ -97,12 +113,15 @@
         height: 55px;
         margin: 0 auto;
     }
+
     .ctable {
         width: 100% !important;
     }
+
     .plans_one_headline {
         position: relative;
     }
+
     .plans_one_headline:before {
         content: url(../images/plans_one_sp.svg);
         position: absolute;
@@ -112,9 +131,11 @@
         height: 55px;
         margin: 0 auto;
     }
+
     .plans_two_headline {
         position: relative;
     }
+
     .plans_two_headline:before {
         content: url(../images/plans_two_sp.svg);
         position: absolute;
@@ -124,9 +145,11 @@
         height: 55px;
         margin: 0 auto;
     }
+
     .plans_three_headline {
         position: relative;
     }
+
     .plans_three_headline:before {
         content: url(../images/plans_three_sp.svg);
         position: absolute;
@@ -136,9 +159,11 @@
         height: 55px;
         margin: 0 auto;
     }
+
     .plans_four_headline {
         position: relative;
     }
+
     .plans_four_headline:before {
         content: url(../images/plans_four_sp.svg);
         position: absolute;
@@ -149,7 +174,6 @@
         margin: 0 auto;
     }
 }
-
 
 /*    @media (min-width: 768px) {
     }*/
@@ -505,7 +529,7 @@ nav.sm a::after {
 }
 
 #offering {
-    background: url(../images/offering_bg.webp) no-repeat;
+    background: url(../images/offering_bg.jpg) no-repeat;
     background-position: bottom;
     background-size: contain;
     margin-bottom: 0;
@@ -559,7 +583,6 @@ nav.sm a::after {
     position: relative;
     /*topBtnの親要素に指定*/
 }
-
 
 /* 5 Columns */
 
